# cldi

./: .gitignore  CMakeLists.txt  README.md  build  clear-cmake-cache
documentation/: 0.About.md  2.Using-in-C-Projects.md  Function-Suffices.md  cldi-standard.txt  how-to-render.txt
standard/: _readme-if-.md-is-unfamiliar.txt  cldi-standard.txt
standard-library/1.head-layer/include/ciahlldi/: cldi-head.h
standard-library/1.head-layer/include/ciahlldi/cldi/: head.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/: NS_DECL.hpp  basics.h  calls.h  macros.h  math.h  settings.h  setup.h  types.h  version.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/calls/: fs.h  memory.h  process.h  sys.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/calls/fs/IMPL/: FILE_OPTIONS.h  FILE_STATUS.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/math/: arithfuncs.h  graphing.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/setup/: cpp-check.hpp  includes.h  platform.h  prerequisites.h  standard-includes.h  stat.h  types.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/setup/platform/: android.h  architecture.h  architecture_ENUM.h  cpudm_ENUM.h  data-model.h  linux.h  macos.h  platform_ENUM.h  stdlib.h  unix.h  windows.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/setup/platform/bsd/: freebsd.h  netbsd.h  openbsd.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/setup/prerequisites/: settings.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/setup/standard-includes/: platform-apis.h  stdc++-includes.h  stdc-includes.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/types/: arraytypes.h  basictypes.h  functypes.h  texttypes.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/types/arraytypes/: CLDIBOOLARR.h  CLDIBYTEARR.h  CLDIDOUBLEARR.h  CLDIFLOATARR.h  CLDIINTARR.h  CLDILONGARR.h  CLDIVLA.h  CLDIVLAHANDLE.h  refs.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/types/functypes/IMPL/: biconsumer.h  bifunction.h  callable.hpp  consumer.h  function.h  monoconsumer.h  monofunction.h  quadconsumer.h  quadfunction.h  supplier.h  triconsumer.h  trifunction.h
standard-library/1.head-layer/include/ciahlldi/cldi/head/types/texttypes/: refs.h
standard-library/1.head-layer/lib/c++/calls/: memory.cpp
standard-library/1.head-layer/lib/c++/types/: arraytypes.cpp
standard-library/1.head-layer/lib/c/calls/: memory.c
standard-library/1.head-layer/lib/c/setup/: stat.c  types.c
standard-library/2.core-layer/include/ciahlldi/cldi/: core.h
standard-library/2.portable-layer/include/ciahlldi/: cldi-portable.h
standard-library/2.portable-layer/include/ciahlldi/cldi/: portable.h
standard-library/2.portable-layer/include/ciahlldi/cldi/portable/: NS_DECL.hpp  handles.h  refvec.h  setup.h  text.h  types.h  version.h
standard-library/2.portable-layer/include/ciahlldi/cldi/portable/errhandling/: throwers.h
standard-library/2.portable-layer/include/ciahlldi/cldi/portable/errhandling/throwers/IMPL/: cldierr_t.assocsr.h  cldierr_t.h
standard-library/2.portable-layer/include/ciahlldi/cldi/portable/handles/: .borrowing.h  file.h  mem.h  text.h
standard-library/2.portable-layer/include/ciahlldi/cldi/portable/setup/: cpp-check.hpp
standard-library/2.portable-layer/include/ciahlldi/cldi/portable/text/: chartypes.h  str.h
standard-library/2.portable-layer/lib /c++/types/functypes/IMPL/: intsupplier.cpp
standard-library/2.portable-layer/lib /c/ciahlldi/cldi/portable/calls/: fs.c  memory.c
standard-library/3.core-layer/include/ciahlldi/: cldi-core.h
standard-library/3.core-layer/include/ciahlldi/cldi/: core.h
standard-library/3.core-layer/include/ciahlldi/cldi/core/: NS_DECL.hpp  errhandling.h  math.h  setup.h  sysfuncs.h  text.h  types.h  version.h
standard-library/3.core-layer/include/ciahlldi/cldi/core/math/: numbers.h
standard-library/3.core-layer/include/ciahlldi/cldi/core/sysfuncs/: memory.h
standard-library/3.core-layer/include/ciahlldi/cldi/core/text/: str.h  strfuncs.h
standard-library/3.core-layer/include/ciahlldi/cldi/core/types/: arr.h  func.h
standard-library/3.core-layer/lib/c++/ciahlldi/cldi/core/math/: numbers.cpp
standard-library/3.core-layer/lib/c++/ciahlldi/cldi/core/text/: chartypes.cpp  str.cpp
standard-library/3.core-layer/lib/c++/ciahlldi/cldi/core/types/: func.cpp
standard-library/3.core-layer/lib/c/ciahlldi/cldi/core/text/: chartypes.c  str.c  str.c.txt  strfuncs.c
standard-library/3.core-layer/lib/c/ciahlldi/cldi/core/types/: arr.c  fs.c
standard-library/4.core-extended/include/ciahlldi/: cldi-core-extended.h
standard-library/4.core-extended/include/ciahlldi/cldi/: core-ext.h  core-extended.h
standard-library/4.core-extended/include/ciahlldi/cldi/core-ext/: NS_DECL.hpp  setup.h  type-system.h  version.h
standard-library/4.core-extended/include/ciahlldi/cldi/core-ext/type-system/: type.h
stdlib/core-layer/include/cldi/: core.h
stdlib/core-layer/include/cldi/core/: setup.h
stdlib/head-layer/include/: cldi-head.h
stdlib/head-layer/include/cldi/: head.h
stdlib/head-layer/include/cldi/head/: array.h  config.h  functypes.h  io.h  iter.h  math.h  memory.h  settings.h  setup.h  string.h  table.h
stdlib/head-layer/include/cldi/head/icxx/: functypes.hpp  io.hpp  iter.hpp  math.hpp  memory.hpp
stdlib/head-layer/include/cldi/head/io/: filestream.h  path.h
stdlib/head-layer/include/cldi/head/math/: complex.h  domain.h  i128.h  matrix.h  numset.h  quad.h  rational.h  shapes2d.h  shapes3d.h  shapes4d.h
stdlib/head-layer/include/cldi/head/setup/: includes.h  platform.h  stat.h  types.h
stdlib/head-layer/include/cldi/head/setup/icxx/: platform.hpp  stat.hpp  types.hpp
stdlib/head-layer/lib/c/: array.c  iter.c  math.c  math.cldiNumset.c  math.shapes2d.c  memory.c  setup.stat.c  setup.types.c  string.c  string.cldiString.c  table.c
stdlib/head-layer/lib/c++/: functypes.cxx  math.cxx
test/head/c/: test.h
test/head/c++/: main.cxx  test.hpp
(+20 files in other folders)
